--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "moje-pierwsze-polecenie":"echo ciasteczko",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/szylon/gallery#readme",
   "dependencies": {
+    "http-server": "^0.11.1",
     "vanilla-javascript": "^1.0.1"
   }
 }
