--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "moje-pierwsze-polecenie":"echo ciasteczko",
+    "moje-pierwsze-polecenie": "echo ciasteczko",
     "start": "http-server"
   },
   "repository": {
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/szylon/gallery#readme",
   "dependencies": {
+    "eslint": "^5.9.0",
     "http-server": "^0.11.1",
+    "super-event-emitter": "^4.1.6",
     "vanilla-javascript": "^1.0.1"
   }
 }
