--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "moje-pierwsze-polecenie": "echo ciasteczko",
-    "start": "http-server"
+    "start": "http-server",
+    "build": "webpack-cli scripts/main.js -o dist/bundle.js --mode=development",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
     "eslint": "^5.9.0",
     "http-server": "^0.11.1",
     "super-event-emitter": "^4.1.6",
-    "vanilla-javascript": "^1.0.1"
+    "vanilla-javascript": "^1.0.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   }
 }
